# TechNow

./: Chap1_Basic_Probability_Theory.md  LICENSE  README.md
CNBC_news/: README.md  (+6 more)
Projects/tmu_monitor_agent/: README.md  TMU_Sector_Monitor_Agent.md  TODO.md  US_Stock_Investor_Recommendation_Model.md  pyproject.toml
Projects/tmu_monitor_agent/CNBC_news/: news_extract.py  news_report_txt_to_html.py  news_summary_20250420.txt
Projects/tmu_monitor_agent/config/: universe.yml
Projects/tmu_monitor_agent/reports/: tmu_sector_report_2026-06-09.txt  tmu_sector_report_2026-06-10.txt  us_investor_recommendations_2026-06-30.txt
Projects/tmu_monitor_agent/src/: config.py  main.py
Projects/tmu_monitor_agent/src/alerts/: alert_handling.py
Projects/tmu_monitor_agent/src/data/: fundamentals.py  market_data.py  news.py
Projects/tmu_monitor_agent/src/ingestion/: cnbc_technology_news.py  yahoo_news.py
Projects/tmu_monitor_agent/src/llm/: narrative.py
Projects/tmu_monitor_agent/src/mapping/: ticker_mapper.py
Projects/tmu_monitor_agent/src/pipeline/: run_agent.py
Projects/tmu_monitor_agent/src/reporting/: report_generator.py  schemas.py
Projects/tmu_monitor_agent/src/reports/: report.py
Projects/tmu_monitor_agent/src/scoring/: score.py
Projects/tmu_monitor_agent/src/signals/: momentum.py  quality.py  risk.py  valuation.py
Projects/tmu_monitor_agent/src/tmu_sector_monitor_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Projects/tmu_monitor_agent/tests/: test_recommendation_logic.py  test_report_generator.py  test_ticker_mapper.py
(+1078 files in other folders)
